Piwik Analytics 1.1.1

	* Update the copyright to 2015 and my email address throughout the project.
	-- Charlie Powell <charlie@evalagency.com>  Thu, 20 Aug 2015 17:24:45 -0400

Piwik Analytics 1.1.0

	* New options for Piwik, track all subdomains and add domain to page titles.
	* New hooks and better widget support for pages.
	-- Charlie Powell <charlie@eval.bz>  Wed, 28 May 2014 19:43:03 -0400

Piwik Analytics 1.0.3

	* Piwik configuration page needed the access permission so the page link doesn't display for
	  unauthorized users.
	* Documentation change, @copyright.
	-- Charlie Powell <charlie@eval.bz>  Sat, 22 Mar 2014 15:02:02 -0400

Piwik Analytics 1.0.2

	* Render the piwik html snipped at the end of the body instead of in the head...
	-- Charlie Powell <charlie@eval.bz>  Mon, 30 Sep 2013 00:06:17 -0400

Piwik Analytics 1.0.1

	* Make use of the namespace versions of View instead of static.
	* Update the description for Piwik.
	* A few new assets.
	-- Charlie Powell <charlie@eval.bz>  Sat, 31 Aug 2013 17:48:53 -0400

Piwik Analytics 1.0.0

	* Initial version
	-- Charlie Powell <charlie@eval.bz>  Wed, 19 Jun 2013 05:36:23 -0400
