@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <!DOCTYPE component PUBLIC "SYSTEM" "http://corepl.us/api/2_4/component.dtd">
-<component xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="1.1.1~bpo26" name="Piwik Analytics" execmode="web">
+<component xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="1.1.1-1~bpo268" name="Piwik Analytics" execmode="web">
 	<requires>
 		<require name="core" type="component" version="2.6.7" operation="ge"/>
 	</requires>
@@ -27,8 +27,8 @@
 		<file filename="templates/pages/piwik/configure.tpl" md5="2ebddb8a00faee1306d901b3ef3f7204"/>
 	</view>
 	<files>
-		<file filename="CHANGELOG" md5="bfa5f21d42b6cc46373db2ef6bc975ba"/>
-		<file filename="component.xml" md5="89003ecd00a8c52e135e1847f8ab8483"/>
+		<file filename="CHANGELOG" md5="ae31ed78ce35952185e2cb76cc7c62eb"/>
+		<file filename="component.xml" md5="643b4857ca935ea26e1b02bd3ac9ca30"/>
 		<file filename="controllers/PiwikController.php" md5="d2ab6e1f0b9384beb4cd5d189540bb6c">
 			<controller name="PiwikController"/>
 		</file>
@@ -42,7 +42,7 @@
 	<upgrades>
 		<upgrade from="1.0.0" to="1.0.1"/>
 		<upgrade from="1.0.1" to="1.0.2"/>
-		<upgrade from="1.0.2" to="1.1.1~bpo26"/>
+		<upgrade from="1.0.2" to="1.1.1-1~bpo268"/>
 	</upgrades>
 	<smartyplugins/>
 	<authors>
